--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-numpy==1.20.3
-ldap3==2.9
 Flask==1.1.2
+numpy==1.20.3
 pycosat==0.6.3
+Flask_Cors==3.0.10
 requests==2.25.1
+ldap3==2.9
 beautifulsoup4==4.9.3
