--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+opencv_python==4.5.2.52
 Flask==1.1.2
+Flask_Compress==1.9.0
+Flask_Cors==3.0.10
 ldap3==2.9
 joblib==1.0.1
-Flask_Cors==3.0.10
-pycosat==0.6.3
 requests==2.25.1
+pycosat==0.6.3
 numpy==1.20.3
 beautifulsoup4==4.9.3
 Pillow==8.2.0
