--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-requests==2.25.1
-Flask_Compress==1.9.0
-joblib==1.0.1
-ldap3==2.9
-Flask==1.1.2
 numpy==1.20.3
 pycosat==0.6.3
+ldap3==2.9
+requests==2.25.1
+Flask==1.1.2
+Flask_Compress==1.9.0
+joblib==1.0.1
 Flask_Cors==3.0.10
 beautifulsoup4==4.9.3
 Pillow==8.2.0
+gunicorn
