--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-ldap3
-Flask
-ortools
-Flask_Compress
-Flask_Cors
-requests
-beautifulsoup4
-gunicorn
-python-dateutil
-lxml
-pytz
-Pillow
+beautifulsoup4==4.11.1
+Flask==2.1.2
+Flask_Compress==1.12
+Flask_Cors==3.0.10
+Pillow==9.5.0
+python_dateutil==2.8.2
+pytz==2023.3
+Requests==2.31.0
